# OpenCV4QuickStart

./: .gitignore  Cargo.toml  README.md  clean.sh
chapter1/: Cargo.toml
chapter1/src/: main.rs
chapter10/: Cargo.toml
chapter10/src/: calibrate_camera.rs  chessboard.rs  concat.rs  homogeneous.rs  main.rs  pnp_and_ransac.rs  project_points.rs  stereo_calibrate.rs  stereo_rectify.rs  undistortion.rs
chapter11/: Cargo.toml
chapter11/src/: absdiff.rs  calc_optical_flow_farneback.rs  calc_optical_flow_pyr_lk.rs  cam_shift.rs  main.rs  mean_shift.rs
chapter2/: Cargo.toml
chapter2/src/: main.rs  video_capture.rs  video_write.rs  yaml_mat.rs
chapter3/: Cargo.toml
chapter3/src/: create_track_bar.rs  cv_color.rs  deep_shadow_copy.rs  find_min_and_max.rs  image_concat.rs  image_flip.rs  image_lut.rs  image_resize.rs  logic_operation.rs  main.rs  max_and_min.rs  mean_and_mean_std_dev.rs  mouse_event.rs  plot.rs  polt.rs  pyramid.rs  split_and_merge.rs  threshold.rs  warp_affine.rs  warp_perspective.rs  warp_polar.rs
chapter4/: Cargo.toml
chapter4/src/: cal_hist.rs  calc_back_project.rs  main.rs
chapter5/: Cargo.toml
chapter5/src/: bilateral_filter.rs  box_filter.rs  canny.rs  edge.rs  filter.rs  gauss_noise.rs  gaussian_blur.rs  get_deriv_kernels.rs  image_blur.rs  laplacian.rs  main.rs  median_blur.rs  salt_and_pepper.rs  scharr.rs  self_filter.rs  sobel.rs
chapter6/: Cargo.toml
chapter6/src/: connected_components.rs  connected_components_with_stats.rs  dilate.rs  distance_transform.rs  erode.rs  main.rs  morphology_app.rs  thinning.rs
chapter7/: Cargo.toml
chapter7/src/: approx_poly_dp.rs  main.rs  (+16 more)
chapter8/: Cargo.toml
chapter9/: Cargo.toml
chapter9/src/: corner_harris.rs  corner_sub_pix.rs  draw_keypoint.rs  good_features_to_track.rs  main.rs  orb.rs  orb_match.rs  orb_match_flann.rs  orb_match_ransac.rs  surf.rs
src/: main.rs
(+11 files in other folders)
