[package]
name = "chapter2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
image = "0.25"
rayon = "1.10"
smol = "2.0"
async-task = "4.7"
serde_yml = "0.0"
serde = { version = "1.0", features = ["derive"] }
opencv = { version = "0.93", default-features = false, features = [
    "dnn",
    "videoio",
    "highgui",
    "imgproc",
    "imgcodecs",
    "features2d",
    "objdetect",
    "tracking",
    "stitching",
    "clang-runtime",
] }